@@ -1075,11 +1075,23 @@ void on_font_change( GtkMenuItem* item, MoveSet* mset )
                                                 xset_get_s( "move_dlg_font" ) );
 
     gtk_widget_modify_font( GTK_WIDGET( mset->input_name ), font_desc );
-    gtk_widget_modify_font( GTK_WIDGET(mset->entry_ext ), font_desc );
-    gtk_widget_modify_font( GTK_WIDGET(mset->input_full_name ), font_desc );
-    gtk_widget_modify_font( GTK_WIDGET(mset->input_path ), font_desc );
-    gtk_widget_modify_font( GTK_WIDGET(mset->input_full_path ), font_desc );
-    gtk_widget_modify_font( GTK_WIDGET(mset->label_mime ), font_desc );
+    gtk_widget_modify_font( GTK_WIDGET( mset->entry_ext ), font_desc );
+    gtk_widget_modify_font( GTK_WIDGET( mset->input_full_name ), font_desc );
+    gtk_widget_modify_font( GTK_WIDGET( mset->input_path ), font_desc );
+    gtk_widget_modify_font( GTK_WIDGET( mset->input_full_path ), font_desc );
+    gtk_widget_modify_font( GTK_WIDGET( mset->label_mime ), font_desc );
+    if ( mset->entry_target )
+        gtk_widget_modify_font( GTK_WIDGET( mset->entry_target ), font_desc );
+    if ( mset->create_new )
+    {
+        // doesn't change drop-down font
+        //gtk_widget_modify_font( GTK_WIDGET( mset->combo_template ), font_desc );
+        gtk_widget_modify_font( GTK_WIDGET( gtk_bin_get_child(
+                                GTK_BIN( mset->combo_template ) ) ), font_desc );
+        //gtk_widget_modify_font( GTK_WIDGET( mset->combo_template_dir ), font_desc );
+        gtk_widget_modify_font( GTK_WIDGET( gtk_bin_get_child(
+                                GTK_BIN( mset->combo_template_dir ) ) ), font_desc );
+    }
 
     if ( font_desc )
         pango_font_description_free( font_desc );
